--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -1,12 +1,50 @@
-﻿<div class="col-md-12">
-    <table class="table table-responsive table-striped text-sm">
+﻿@model IEnumerable<ERPBO.Agriculture.ViewModels.RawMaterialViewModel>
+    @{ 
+        int sl=0;
+    }
+<div class="col-md-12">
+    <table class="table table-responsive-lg table-striped text-sm">
         <thead>
             <tr class="btn-dark">
-                <th></th>
+                <th class="hide">id</th>
+                <th>SL</th>
+                <th>Organization name</th>
+                <th>Depot Name</th>
+                <th>Raw Material</th>
+                <th>Expire Date</th>
             </tr>
         </thead>
         <tbody>
-            <tr></tr>
+            @if (Model.Count() > 0)
+            {
+                foreach (var raw in Model)
+                {
+                    sl++;
+                    
+            <tr>
+
+                <td class="hide">@raw.RawMaterialId</td>
+                <td>@sl</td>
+                <td>@raw.OrganizationName</td>
+                <td>@raw.DepotId</td>
+                <td>@raw.RawMaterialName</td>
+                <td>@raw.ExpireDate.ToShortDateString()</td>
+            </tr>
+
+                }
+
+
+            }
+            else
+            {
+                <tr>
+                    <td colspan="6">No Data Found </td>
+
+                </tr>
+
+
+            }
+
 
         </tbody>
 
