--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -26,7 +26,7 @@
                 <td class="hide">@raw.RawMaterialId</td>
                 <td>@sl</td>
                 <td>@raw.OrganizationName</td>
-                <td>@raw.DepotId</td>
+                <td>@raw.DepotName</td>
                 <td>@raw.RawMaterialName</td>
                 <td>@raw.ExpireDate.ToShortDateString()</td>
             </tr>
